--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                   <div class="header__qr-apps">
                     <a href="#" class="header__qr-link">
                       <img
-                        src="/assets/img/gg_play.png"
+                        src="./assets/img/gg_play.png"
                         alt="gg play"
                         class="header__qr-download-img"
                       />
@@ -54,7 +54,7 @@
 
                     <a href="#" class="header__qr-link">
                       <img
-                        src="/assets/img/app_store.png"
+                        src="./assets/img/app_store.png"
                         alt="app_store"
                         class="header__qr-download-img"
                       />
