--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
         <div class="footer__download-app">
           <a href="#" class="footer__download-img-link">
             <img
-              src="/assets/img/gg_play.png"
+              src="/assets/img/gg_play.PNG"
               alt="gg play"
               class="footer__download-app-img"
             />
