--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 >
                 <div class="header__qr">
                   <img
-                    src="/assets/img/qr_code.png"
+                    src="/assets/img/qr_code.PNG"
                     alt="qr code"
                     class="header__qr-img"
                   />
@@ -54,7 +54,7 @@
 
                     <a href="#" class="header__qr-link">
                       <img
-                        src="./assets/img/app_store.png"
+                        src="./assets/img/app_store.PNG"
                         alt="app_store"
                         class="header__qr-download-img"
                       />
@@ -88,7 +88,7 @@
                     <li class="header__notify-item header__notify-item--viewed">
                       <a href="#" class="header__notify-link">
                         <img
-                          src="/assets/img/notifycation/1.png"
+                          src="/assets/img/notifycation/1.PNG"
                           alt="notification"
                           class="header__notify-img"
                         />
@@ -107,7 +107,7 @@
                     <li class="header__notify-item header__notify-item--viewed">
                       <a href="#" class="header__notify-link">
                         <img
-                          src="/assets/img/notifycation/2.png"
+                          src="/assets/img/notifycation/2.PNG"
                           alt="notification"
                           class="header__notify-img"
                         />
@@ -127,7 +127,7 @@
                     <li class="header__notify-item header__notify-item--viewed">
                       <a href="#" class="header__notify-link">
                         <img
-                          src="/assets/img/notifycation/3.png"
+                          src="/assets/img/notifycation/3.PNG"
                           alt="notification"
                           class="header__notify-img"
                         />
@@ -146,7 +146,7 @@
                     <li class="header__notify-item header__notify-item--viewed">
                       <a href="#" class="header__notify-link">
                         <img
-                          src="/assets/img/notifycation/1.png"
+                          src="/assets/img/notifycation/1.PNG"
                           alt="notification"
                           class="header__notify-img"
                         />
@@ -195,7 +195,7 @@
               </li> -->
               <!-- Login Header -->
 <li class="header__navbar-item header__navbar-user">
-  <img src="/assets/img/notifycation/2.png" alt="logi_account" class="header__navbar-user-img">
+  <img src="/assets/img/notifycation/2.PNG" alt="logi_account" class="header__navbar-user-img">
   <span class="header__navbar-user-name">Nguyễn Thanh Huy</span>
   <!--  User Mennu-->
   <ul class="header__navbar-user-menu">
@@ -279,18 +279,18 @@
                 <span class="header__cart-notice">3</span>
                 <!-- No Cart -->
                 <!-- <div class="header__cart-list header__cart-list--no-cart">
-  <img src="/assets/img/no-cart.png" alt="no cart" class="header__cart-no-cart">
+  <img src="/assets/img/no-cart.PNG" alt="no cart" class="header__cart-no-cart">
   <span class="header__cart-list-no-cart-msg">Chưa có sản phẩm</span>
               </div> -->
              <!-- Has Cart -->
              <div class="header__cart-list ">
-              <img src="/assets/img/no-cart.png" alt="no cart" class="header__cart-no-cart-img">
+              <img src="/assets/img/no-cart.PNG" alt="no cart" class="header__cart-no-cart-img">
               <span class="header__cart-list-no-cart-msg">Chưa có sản phẩm</span>
               <!-- Cart Item -->
               <h4 class="header__cart-heading">Sản phẩm đã thêm</h4>
               <ul class="header__cart-list-item">
                 <li class="header__cart-item">
-                  <img src="/assets/img/notifycation/2.png" alt="cart" class="header__cart-img">
+                  <img src="/assets/img/notifycation/2.PNG" alt="cart" class="header__cart-img">
                   <div class="header__cart-item-info">
                     <div class="header__cart-item-head">
                       <h5 class="header__cart-item-name">Giỏ Xách 99k</h5>
@@ -307,7 +307,7 @@
                   </div>
                 </li> 
                 <li class="header__cart-item">
-                  <img src="/assets/img/notifycation/4.png" alt="cart" class="header__cart-img">
+                  <img src="/assets/img/notifycation/4.PNG" alt="cart" class="header__cart-img">
                   <div class="header__cart-item-info">
                     <div class="header__cart-item-head">
                       <h5 class="header__cart-item-name">Giỏ Xách 99k</h5>
@@ -324,7 +324,7 @@
                   </div>
                 </li> 
                 <li class="header__cart-item">
-                  <img src="/assets/img/notifycation/1.png" alt="cart" class="header__cart-img">
+                  <img src="/assets/img/notifycation/1.PNG" alt="cart" class="header__cart-img">
                   <div class="header__cart-item-info">
                     <div class="header__cart-item-head">
                       <h5 class="header__cart-item-name">Giỏ Xách 99k</h5>
@@ -746,7 +746,7 @@
       <h3 class="footer__heading">Vào Cửa Hàng Trên Ứng Dụng</h3>
       <div class="footer__download">
         
-        <img src="https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/assets/d91264e165ed6facc6178994d5afae79.png" alt="qr" class="footer__download-qr-img">
+        <img src="https://deo.shopeemobile.com/shopee/shopee-pcmall-live-sg/assets/d91264e165ed6facc6178994d5afae79.PNG" alt="qr" class="footer__download-qr-img">
         <div class="footer__download-app">
           <a href="#" class="footer__download-img-link">
             <img
@@ -758,7 +758,7 @@
 
           <a href="#" class="footer__download-img-link">
             <img
-              src="/assets/img/app_store.png"
+              src="/assets/img/app_store.PNG"
               alt="app_store"
               class="footer__download-app-img"
             />
